# scx

./: TODO.md  benchmark_tutorial.md  brainstorm.txt  child  child.c  child_1  child_1.c  child_2  child_3  child_3.c  cpu_freq_visualize.py  data.csv  data3.csv  data_analysis.py  data_results.txt  data_scraper  data_scraper.c  data_visuals.py  data_visuals_both.py  fork_spawn  fork_spawn.c  input.csv  ks.csv  observations.txt  spawner.c  task_data.db  task_data.h  us.csv  visuals.py  visuals1.py  visuals2.py
.cache/clangd/index/: cc_cflags_probe.c.7D38B9C5D08AB56D.idx  common.h.1931D06E3D3ED61F.idx  compat.h.373A3E1B5ADCB90D.idx  scx_central.c.5B49168DD2DDBC6F.idx  scx_data_plot_ks.c.51F29F328C5C93AF.idx  scx_data_plot_us.c.6AAD1B66187C1942.idx  scx_fifo.c.4F59F8CD79867E10.idx  scx_flatcg.c.DF8AEF80A45BF285.idx  scx_flatcg.h.C129FC3292DA2442.idx  scx_ks.c.8DE198D5F748FFF2.idx  scx_nest.c.15F230304D87C73A.idx  scx_nest.h.752EA97B1F3B14A2.idx  scx_nest_stats_table.h.460F0C2319D79ADA.idx  scx_pair.c.4C2C6003B5DABB3C.idx  (+10 more)
data/: data2.csv
scheds/c/: backup  backupbpf  meson.build  scx_data_plot_ks.bpf.c  scx_data_plot_ks.c  scx_data_plot_us.bpf.c  scx_data_plot_us.c  scx_fifo.bpf.c  scx_fifo.c  scx_ks.bpf.c  scx_ks.c  scx_ml.h  scx_ml_collect.bpf.c  scx_ml_collect.c  scx_ml_ks.bpf.c  scx_ringbuf_us.bpf.c  scx_ringbuf_us.c  scx_simple.bpf.c  scx_simple.c  scx_test.bpf.c  scx_test.c  scx_test_ks.bpf.c  scx_test_ks.c  scx_test_ks.h  scx_test_rb.bpf.c  scx_test_rb.c  scx_test_us.bpf.c  scx_test_us.c  task_sched_data.h
thread_spawners/: child_2.c  fork_spawn.c
